[gd_scene load_steps=10 format=3 uid="uid://mjc1ujficlc2"]

[ext_resource type="Script" path="res://addons/glow_border_effect/glow_border_effect_rederer.gd" id="1"]
[ext_resource type="Shader" path="res://addons/glow_border_effect/blure_alpha_pass_shader.gdshader" id="3_37o2n"]
[ext_resource type="Environment" uid="uid://b6hqsqakkwgfo" path="res://addons/glow_border_effect/glow_camera_environment.tres" id="5"]

[sub_resource type="Shader" id="Shader_b1m4v"]
code = "shader_type canvas_item;

uniform sampler2D view_prepass;
uniform sampler2D view_blure;
uniform float intensity : hint_range(0.0, 5.0);

void fragment() {
	vec4 prepass = texture(view_prepass, UV); // prepass
	vec4 blure = texture(view_blure, UV); // blurred
	
	vec4 glow = min(vec4(1.0,1.0,1.0,1.0), max(vec4(0.0,0,0.0,0.0), blure - prepass))*intensity;
	COLOR = glow;
}"

[sub_resource type="ViewportTexture" id="ViewportTexture_xb8m5"]
viewport_path = NodePath("ViewportBlure")

[sub_resource type="ViewportTexture" id="ViewportTexture_sle7s"]
viewport_path = NodePath("ViewportBlure/ViewportContainerBlureX/ViewportHalfBlure/ViewportContainerBlureY/ViewportPrepass")

[sub_resource type="ShaderMaterial" id="15"]
resource_local_to_scene = true
shader = SubResource("Shader_b1m4v")
shader_parameter/intensity = 3.0
shader_parameter/view_prepass = SubResource("ViewportTexture_sle7s")
shader_parameter/view_blure = SubResource("ViewportTexture_xb8m5")

[sub_resource type="ShaderMaterial" id="17"]
resource_local_to_scene = true
shader = ExtResource("3_37o2n")
shader_parameter/sampleOffset = Vector2(1, 0)

[sub_resource type="ShaderMaterial" id="19"]
resource_local_to_scene = true
shader = ExtResource("3_37o2n")
shader_parameter/sampleOffset = Vector2(0, 1)

[node name="GlowBorderEffectRenderer" type="SubViewportContainer"]
material = SubResource("15")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource("1")

[node name="ViewportBlure" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="ViewportContainerBlureX" type="SubViewportContainer" parent="ViewportBlure"]
material = SubResource("17")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="ViewportHalfBlure" type="SubViewport" parent="ViewportBlure/ViewportContainerBlureX"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="ViewportContainerBlureY" type="SubViewportContainer" parent="ViewportBlure/ViewportContainerBlureX/ViewportHalfBlure"]
material = SubResource("19")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="ViewportPrepass" type="SubViewport" parent="ViewportBlure/ViewportContainerBlureX/ViewportHalfBlure/ViewportContainerBlureY"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Camera3DPrepass" type="Camera3D" parent="ViewportBlure/ViewportContainerBlureX/ViewportHalfBlure/ViewportContainerBlureY/ViewportPrepass"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.920505, 0.390731, 0, -0.390731, 0.920505, 0, 2, 6)
cull_mask = 1024
environment = ExtResource("5")
